(Cil) update testLinearDisassembler
- made testLinearDisassembler3 work with the ROSE SgAsmCil classes
  and get the SgAsmCilMetadataRoot from the memory pool

- phase out testLinearDisassembler2, b/c with the parsing now
  automatically invoked from the ROSEfrontendReplacement the test is no
longer needed (use testLinearDisassembler3 instead).

RC-1335

--- a/tests/nonsmoke/functional/Makefile.am
+++ b/tests/nonsmoke/functional/Makefile.am
@@ -6,15 +6,15 @@ PHONY: test test_testTokenGeneration test_testAnalysis test_testCodeGeneration t
 
 include $(top_srcdir)/tests/nonsmoke/functional/input_codes/Makefile.for.input.codes
 
-# DQ (4/17/2010): If we are not supporting C++ then we can't run most of our tests, but if 
+# DQ (4/17/2010): If we are not supporting C++ then we can't run most of our tests, but if
 # we are supporting only Fortran then we can at least run the Fortran tests (same with PHP).
 # SUBDIRS = CompileTests roseTests RunTests PerformanceTests CompilerOptionsTests translatorTests
 # SUBDIRS = CompileTests roseTests
 # SUBDIRS += . UnitTests CompileTests
 
 # DQ (10/21/2016): Change order of tests (don't test current directory first).
-# SUBDIRS += . CompileTests UnitTests 
-SUBDIRS += CompileTests UnitTests 
+# SUBDIRS += . CompileTests UnitTests
+SUBDIRS += CompileTests UnitTests
 
 if !ROSE_USE_CLANG_FRONTEND
 
@@ -24,7 +24,7 @@ SUBDIRS += testSupport
 
 
 #if !ROSE_USE_INSURE
-# DQ (4/23/2011): Ignoring this whole directory might be over kill. But I have had problems, 
+# DQ (4/23/2011): Ignoring this whole directory might be over kill. But I have had problems,
 # only on Hudson, just compiling a number of these subdirectories.
    SUBDIRS += roseTests
 #endif
@@ -77,10 +77,10 @@ noinst_PROGRAMS = \
    testTokenGeneration \
    testTemplates \
    testBackend \
-   readFileTwice 
+   readFileTwice
 
 if ROSE_BUILD_BINARY_ANALYSIS_SUPPORT
-   noinst_PROGRAMS += testLinearDisassembler2 testLinearDisassembler3
+   noinst_PROGRAMS += testLinearDisassembler3
 endif
 
 if ROSE_WITH_LIBHARU
@@ -94,12 +94,12 @@ endif
 # Phase 0 tests code:
 # This is a test of the EDG and OFP parser support. No significant part of ROSE is generated.
 # A bit of the infrastructure of ROSE is tested that sets up work to build the ROSE AST, etc.
-# This test only works with C/C++ and Fortran.  Not clear what it means for the binary, 
+# This test only works with C/C++ and Fortran.  Not clear what it means for the binary,
 # which has its own options for skipping different phases.
 testParser_SOURCES = testParser.C
 
-# This test code just calls the EDG frontend and then compiles the 
-# original source file using the backend specified to ROSE.  This is 
+# This test code just calls the EDG frontend and then compiles the
+# original source file using the backend specified to ROSE.  This is
 # useful in evaluating the newer EDG frontend against test codes.
 testFrontEnd_SOURCES = testFrontEnd.C
 
@@ -111,7 +111,7 @@ testAnalysis_SOURCES = testAnalysis.C
 
 # Phase 2 tests code:
 # This is used in specialized tests outside of ROSE testing (e.g. intermediate testing of ROSE compiling large projects).
-# This test the ability to read the application and generate the source code, but uses the original source code 
+# This test the ability to read the application and generate the source code, but uses the original source code
 # with the backend compiler to generate object files or executables.
 testCodeGeneration_SOURCES = testCodeGeneration.C
 
@@ -131,7 +131,7 @@ if ROSE_WITH_LIBHARU
 testPDFGeneration_SOURCES = testPDFGeneration.C
 endif
 
-# This tests the token generation capabilities which are an option in ROSE used to support the 
+# This tests the token generation capabilities which are an option in ROSE used to support the
 # generation of patches to define transformations of large scale applications.
 testTokenGeneration_SOURCES = testTokenGeneration.C
 
@@ -151,7 +151,6 @@ testBackend_SOURCES = testBackend.C
 readFileTwice_SOURCES = readFileTwice.C
 
 if ROSE_BUILD_BINARY_ANALYSIS_SUPPORT
-testLinearDisassembler2_SOURCES = testLinearDisassembler2.C
 testLinearDisassembler3_SOURCES = testLinearDisassembler3.C
 endif
 
@@ -161,7 +160,7 @@ endif
 
 if ROSE_WITH_ATERM
 # The Stratego and A-Term support is outside of ROSE
-# This needs a configure flag so that the location outside 
+# This needs a configure flag so that the location outside
 # of ROSE can be easily specificed at configure time.
 # ATERM_INCLUDE = -I$(ATERM_INSTALL_PATH)/include
 # ATERM_LIB_DIR = $(ATERM_INSTALL_PATH)/lib
@@ -403,7 +402,7 @@ if ROSE_WITH_LIBHARU
 test_testPDFGeneration: testPDFGeneration
 endif
 
-# DQ (74/6/2017): Adding test for the version of identityTranslator that is distributed 
+# DQ (74/6/2017): Adding test for the version of identityTranslator that is distributed
 # in the exampleTranslators/documentedExamples/simpleTranslatorExamples directory.
 exampleIdentityTranslator:
 	$(MAKE) -C $(top_builddir)/exampleTranslators/documentedExamples/simpleTranslatorExamples
@@ -480,7 +479,7 @@ check-local: conditional-check-local
 clean-local: myCleanRule
 
 myCleanRule:
-	rm -f testLinkFileAnalysisExecutable testLinkFileCodeGenerationExecutable testLinkFileTranslatorExecutable 
+	rm -f testLinkFileAnalysisExecutable testLinkFileCodeGenerationExecutable testLinkFileTranslatorExecutable
 	rm -f testExecutableFileAnalysisExecutable testExecutableFileCodeGenerationExecutable testExecutableFileTranslatorExecutable
 	rm -f rose_*.C inputFileTranslator.C inputFileCodeGeneration.C inputFileAnalysis.C inputSimpleLinkFileTranslator.C
 	rm -f inputObjectFileAnalysis.C inputObjectFileCodeGeneration.C inputObjectFileTranslator.C alt_ObjectFileTokenGeneration_inputFile.C
