(Testing) Minor changes for running inside a container
* Provide default values for the portability tools source
  location. This prevents the setup script from failing when you
  forget to provide location, but it does mean that the portability
  testing tools might need to be compiled twice. First time is using
  the defaults in order to read the configuration, then compiling the
  configured version.

* Don't disable software updates if not possible. This is to prevent
  errors in Docker containers

* Use boost 1.78.0 instead of 1.69.0 when building the matrix
  tools. The older version of boost no longer compiles with the
  default GCC on Ubuntu-22.04.

* Try 'whoami' if $LOGNAME is not set. If both fail, return "unknown"
  rather than failing.

RPM-211

--- a/projects/MatrixTesting/scripts/Makefile.am
+++ b/projects/MatrixTesting/scripts/Makefile.am
@@ -2,6 +2,7 @@ include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
 bin_SCRIPTS =					\
 	rose-matrix-all-warning-types		\
 	rose-matrix-count-warnings		\
+	rose-matrix-docker-run			\
 	rose-matrix-monitor			\
 	rose-matrix-output			\
 	rose-matrix-prune-errors		\
