(Support) Upgrade to latest Sawyer release
* Added Sawyer::Result

* Other minor changes, such as documentation

RPM-212

--- a/src/util/Sawyer/Makefile.am
+++ b/src/util/Sawyer/Makefile.am
@@ -94,6 +94,7 @@ sawyerinclude_HEADERS =				\
 	Optional.h				\
 	PoolAllocator.h				\
 	ProgressBar.h				\
+	Result.h				\
 	Sawyer.h				\
 	Set.h					\
 	SharedObject.h				\
