--- a/docs/Rose/rose.cfg.in
+++ b/docs/Rose/rose.cfg.in
@@ -688,16 +688,16 @@ INPUT                  = @top_srcdir@/docs/Rose/MainPage.dox \
                          @top_srcdir@/docs/testDoxygen \
 			 @top_srcdir@/src/Rose \
 			 @top_srcdir@/src/Rose/BinaryAnalysis \
+			 @top_srcdir@/src/Rose/BinaryAnalysis/ByteCode \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic \
+			 @top_srcdir@/src/Rose/BinaryAnalysis/Disassembler \
+			 @top_srcdir@/src/Rose/BinaryAnalysis/Dwarf \
                          @top_srcdir@/src/Rose/BinaryAnalysis/InstructionSemantics \
                          @top_srcdir@/src/Rose/BinaryAnalysis/InstructionSemantics/BaseSemantics \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/ModelChecker \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Partitioner2 \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Unparser \
-			 @top_srcdir@/src/Rose/Color \
 			 @top_srcdir@/src/Rose/CommandLine \
-			 @top_srcdir@/src/Rose/Diagnostics \
-			 @top_srcdir@/src/Rose/FileSystem \
 			 @top_srcdir@/src/Rose/StringUtility \
 			 @top_srcdir@/src/Rose/AST \
 			 @top_srcdir@/src/Rose/Traits \
