(Binary Analysis) Forward declarations for disassemblers
* Added <Rose/BinaryAnalysis/Disassembler/BasicTypes.h> that has
  mostly forward declarations for disassembler stuff and is thus
  suitable for inclusion into other header files.

RPM-217

--- a/src/Rose/Makefile.am
+++ b/src/Rose/Makefile.am
@@ -55,7 +55,9 @@ librose_partial_la_SOURCES =								\
 	BinaryAnalysis/Disassembler/Aarch32.C						\
 	BinaryAnalysis/Disassembler/Aarch64.C						\
 	BinaryAnalysis/Disassembler/Base.C						\
+	BinaryAnalysis/Disassembler/BasicTypes.C					\
 	BinaryAnalysis/DisassemblerCil.C						\
+	BinaryAnalysis/Disassembler/Exception.C						\
 	BinaryAnalysis/DisassemblerJvm.C						\
 	BinaryAnalysis/Disassembler/M68k.C						\
 	BinaryAnalysis/Disassembler/Mips.C						\
