--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -320,7 +320,9 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/Disassembler/Aarch32.h					\
 	Rose/BinaryAnalysis/Disassembler/Aarch64.h					\
 	Rose/BinaryAnalysis/Disassembler/Base.h						\
+	Rose/BinaryAnalysis/Disassembler/BasicTypes.h					\
 	Rose/BinaryAnalysis/DisassemblerCil.h						\
+	Rose/BinaryAnalysis/Disassembler/Exception.h					\
 	Rose/BinaryAnalysis/DisassemblerJvm.h						\
 	Rose/BinaryAnalysis/Disassembler/M68k.h						\
 	Rose/BinaryAnalysis/Disassembler/Mips.h						\
