--- a/src/Rose/BinaryAnalysis/Disassembler/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/Disassembler/CMakeLists.txt
@@ -2,6 +2,8 @@ add_library(roseBinaryAnalysisDisassembler OBJECT
   Aarch32.C
   Aarch64.C
   Base.C
+  BasicTypes.C
+  Exception.C
   M68k.C
   Mips.C
   Null.C
@@ -14,6 +16,8 @@ install(FILES
   Aarch32.h
   Aarch64.h
   Base.h
+  BasicTypes.h
+  Exception.h
   M68k.h
   Mips.h
   Null.h
