(ByteCode) Dead code cleanup/removal
- Moved the SgBinaryComposite class from src/frontend/SageIII/sage_support/sage_support.cpp
  to src/frontend/BinaryFormats/BinaryComposite.C
- stage 11

JVM-1
LDRD_SI-1

--- a/src/frontend/BinaryFormats/CMakeLists.txt
+++ b/src/frontend/BinaryFormats/CMakeLists.txt
@@ -8,6 +8,10 @@ add_library(roseBinaryFormats OBJECT
   Rva.C
   BinaryVxcoreParser.C
 
+  ### BinaryComposite classes ###
+  BinaryComposite.C
+  #TODO: JvmComposite.C
+
   ### Generic Base Classes ###
   GenericDynamicLinking.C
   GenericFile.C
