--- a/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
@@ -635,7 +635,8 @@ TESTCODES_REQUIRED_TO_PASS = \
      test2021_16.c \
      test2021_17.c \
      test2021_18.c \
-     test2022_01.c 
+     test2022_01.c \
+     test2022_02.c 
 
 
 TESTCODE_CURRENTLY_FAILING = \
