--- a/Makefile.am
+++ b/Makefile.am
@@ -339,8 +339,8 @@ install-exec-local:
 install-data-local: uninstall-local
 	-mkdir -p $(DESTDIR)$(includedir)
 if ROSE_USE_CLANG_FRONTEND
-	mkdir -p "$(DESTDIR)$(includedir)/clang"
-	cp -R $(top_builddir)/include-staging/* "$(DESTDIR)$(includedir)/clang"
+	mkdir -p "$(DESTDIR)$(includedir)"
+	cp -R $(top_builddir)/include-staging/* "$(DESTDIR)$(includedir)"
 else
 #	DQ (11/1/2011): The EDG 4.x support does not require a separate include-staging directory.
 	mkdir -p "$(DESTDIR)$(includedir)/edg"
