(Binary Analysis) Created Disassembler namespace
RPM-217

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -141,6 +141,7 @@ set(rose_LIB_SRCS
   $<TARGET_OBJECTS:roseBinaryAnalysis>
   $<TARGET_OBJECTS:roseBinaryAnalysisByteCode>
   $<TARGET_OBJECTS:roseBinaryAnalysisConcolic>
+  $<TARGET_OBJECTS:roseBinaryAnalysisDisassembler>
   $<TARGET_OBJECTS:roseBinaryAnalysisInstructionSemantics>
   $<TARGET_OBJECTS:roseBinaryAnalysisInstructionSemanticsBaseSemantics>
   $<TARGET_OBJECTS:roseBinaryAnalysisModelChecker>
