(Code Cleanup) Removed all Sage untyped IR nodes
- Removed all Sage untyped nodes (names starting with SgUntyped). Originally these nodes
  were to be used as an intermediate IR to construct a tree directly from a parser, e.g.,
  a Fortran parser. Subsequently the untyped nodes were to be traversed to rewrite a
  regular Sage AST. Ultimately it proved easier to simply construct regular IR nodes
  directly from the parser. Using the untyped system just led to an unnecessary step
  and wasted effort.

ISCP-22

--- a/src/frontend/SageIII/sageInterface/CMakeLists.txt
+++ b/src/frontend/SageIII/sageInterface/CMakeLists.txt
@@ -9,7 +9,6 @@ add_library(sageInterface OBJECT
   generateUniqueName.C
   sageBuilder.C
   sageBuilder_fortran.C
-  sageBuilder_untypedNodes.C
   SageBuilderAsm.C
   abiStuff.C)
 
@@ -17,6 +16,6 @@ add_dependencies(sageInterface rosetta_generated)
 
 install(
   FILES  sageInterface.h sageBuilder.h SageBuilderAsm.h integerOps.h abiStuff.h
-         sageFunctors.h sageGeneric.h sageInterfaceAsm.h untypedBuilder.h
+         sageFunctors.h sageGeneric.h sageInterfaceAsm.h
   DESTINATION ${INCLUDE_INSTALL_DIR}
   )
