(ClangFE) deref variable in initialization
test2022_03.c

RC-1387

--- a/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
@@ -636,7 +636,8 @@ TESTCODES_REQUIRED_TO_PASS = \
      test2021_17.c \
      test2021_18.c \
      test2022_01.c \
-     test2022_02.c 
+     test2022_02.c \
+     test2022_03.c 
 
 
 TESTCODE_CURRENTLY_FAILING = \
