(codethorn) fixed domain checks for parallel eval
* changed domain checks to use different output files for each check
  - this had the potential to cause conflicts when run in parallel
  - modified make clean to also remove new output files

CODETHORN-70

--- a/projects/CodeThorn/src/Makefile.am
+++ b/projects/CodeThorn/src/Makefile.am
@@ -1005,7 +1005,7 @@ clean-local: clean-thorn4
 	rm -f *.cfg.dot # runParCfgTests
 	rm -f a.out
 	rm -rf ../docs/doxygen
-	rm -f *.imout
+	rm -f *.imout*
 	rm -f *.exe
 	rm -f *.imout.check
 	rm -Rf make_check_log_*
