(ClangFE) Fixed autonomous structure declaration misplaced
added test test2022_04.c

RC-1388

--- a/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
@@ -637,7 +637,8 @@ TESTCODES_REQUIRED_TO_PASS = \
      test2021_18.c \
      test2022_01.c \
      test2022_02.c \
-     test2022_03.c 
+     test2022_03.c \
+     test2022_04.c 
 
 
 TESTCODE_CURRENTLY_FAILING = \
