(thorn4) refactors Thorn4Parser into separate files
CODETHORN-70

--- a/projects/CodeThorn/src/Makefile.am
+++ b/projects/CodeThorn/src/Makefile.am
@@ -571,6 +571,10 @@ thorn3_SOURCES = \
 # TOOL: THORN4 create graph visualizations of state transition systems
 ###################################################################
 
+# only informative
+thorn4_xHEADERS = \
+  Thorn4CommandLineParser.h
+
 # thorn4 uses libcodethorn
 thorn4_DEPENDENCIES=libcodethorn.la
 
@@ -581,6 +585,7 @@ thorn4_CXXFLAGS = -fopenmp -Wall -O3
 
 # codethorn sources in addition to libcodethorn
 thorn4_SOURCES = \
+  Thorn4CommandLineParser.C \
   thorn4.C
 
 
