(Binary Analysis) Moved a few tools from projects/BinaryAnalysisTools
* Moved a few of the grown-up tools from projects/BinaryAnalysisTools
  to tools/BinaryAnalysis. More will be coming later.

RPM-224

--- a/tools/BinaryAnalysis/Makefile.am
+++ b/tools/BinaryAnalysis/Makefile.am
@@ -30,6 +30,13 @@ bat_cfg_LDFLAGS = $(ROSE_RPATHS)
 bat_cfg_LDADD = libbatSupport.a $(ROSE_LIBS)
 tests += bat-cfg.passed
 
+bin_PROGRAMS += bat-check-execution
+bat_check_execution_SOURCES = bat-check-execution.C
+bat_check_execution_CPPFLAGS = $(ROSE_INCLUDES)
+bat_check_execution_LDFLAGS = $(ROSE_RPATHS)
+bat_check_execution_LDADD = libbatSupport.a $(ROSE_LIBS)
+tests += bat-check-execution.passed
+
 bin_PROGRAMS += bat-container
 bat_container_SOURCES = bat-container.C
 bat_container_CPPFLAGS = $(ROSE_INCLUDES)
@@ -37,12 +44,40 @@ bat_container_LDFLAGS = $(ROSE_RPATHS)
 bat_container_LDADD = libbatSupport.a $(ROSE_LIBS)
 tests += bat-container.passed
 
+bin_PROGRAMS += bat-debug-semantics
+bat_debug_semantics_SOURCES = bat-debug-semantics.C
+bat_debug_semantics_CPPFLAGS = $(ROSE_INCLUDES)
+bat_debug_semantics_LDFLAGS = $(ROSE_RPATHS)
+bat_debug_semantics_LDADD = libbatSupport.a $(ROSE_LIBS)
+tests += bat-debug-semantics.passed
+
+bin_PROGRAMS += bat-delta-bijection
+bat_delta_bijection_SOURCES = bat-delta-bijection.C
+bat_delta_bijection_CPPFLAGS = $(ROSE_INCLUDES)
+bat_delta_bijection_LDFLAGS = $(ROSE_RPATHS)
+bat_delta_bijection_LDADD = libbatSupport.a $(ROSE_LIBS)
+tests += bat-delta-bijection.passed
+
 bin_PROGRAMS += bat-dis
 bat_dis_SOURCES = bat-dis.C
 bat_dis_CPPFLAGS = $(ROSE_INCLUDES)
 bat_dis_LDFLAGS = $(ROSE_RPATHS)
 bat_dis_LDADD = libbatSupport.a $(ROSE_LIBS)
 tests += bat-dis.passed
+
+bin_PROGRAMS += bat-dwarf-lines
+bat_dwarf_lines_SOURCES = bat-dwarf-lines.C
+bat_dwarf_lines_CPPFLAGS = $(ROSE_INCLUDES)
+bat_dwarf_lines_LDFLAGS = $(ROSE_RPATHS)
+bat_dwarf_lines_LDADD = libbatSupport.a $(ROSE_LIBS)
+tests += bat-dwarf-lines.passed
+
+bin_PROGRAMS += bat-entropy
+bat_entropy_SOURCES = bat-entropy.C
+bat_entropy_CPPFLAGS = $(ROSE_INCLUDES)
+bat_entropy_LDFLAGS = $(ROSE_RPATHS)
+bat_entropy_LDADD = libbatSupport.a $(ROSE_LIBS)
+tests += bat-entropy.passed
 
 bin_PROGRAMS += bat-insnfreq
 bat_insnfreq_SOURCES = bat-insnfreq.C
@@ -57,13 +92,6 @@ bat_insnfreq_cmp_CPPFLAGS = $(ROSE_INCLUDES)
 bat_insnfreq_cmp_LDFLAGS = $(ROSE_RPATHS)
 bat_insnfreq_cmp_LDADD = libbatSupport.a $(ROSE_LIBS)
 tests += bat-insnfreq-cmp.passed
-
-bin_PROGRAMS += bat-entropy
-bat_entropy_SOURCES = bat-entropy.C
-bat_entropy_CPPFLAGS = $(ROSE_INCLUDES)
-bat_entropy_LDFLAGS = $(ROSE_RPATHS)
-bat_entropy_LDADD = libbatSupport.a $(ROSE_LIBS)
-tests += bat-entropy.passed
 
 bin_PROGRAMS += bat-flir-ascribe
 bat_flir_ascribe_SOURCES = bat-flir-ascribe.C
@@ -114,6 +142,20 @@ bat_mem_LDFLAGS = $(ROSE_RPATHS)
 bat_mem_LDADD = libbatSupport.a $(ROSE_LIBS)
 tests += bat-mem.passed
 
+bin_PROGRAMS += bat-native-trace
+bat_native_trace_SOURCES = bat-native-trace.C
+bat_native_trace_CPPFLAGS = $(ROSE_INCLUDES)
+bat_native_trace_LDFLAGS = $(ROSE_RPATHS)
+bat_native_trace_LDADD = libbatSupport.a $(ROSE_LIBS)
+tests += bat-native-trace.passed
+
+bin_PROGRAMS += bat-pardis
+bat_pardis_SOURCES = bat-pardis.C
+bat_pardis_CPPFLAGS = $(ROSE_INCLUDES)
+bat_pardis_LDFLAGS = $(ROSE_RPATHS)
+bat_pardis_LDADD = libbatSupport.a $(ROSE_LIBS)
+tests += bat-pardis.passed
+
 bin_PROGRAMS += bat-prop
 bat_prop_SOURCES = bat-prop.C
 bat_prop_CPPFLAGS = $(ROSE_INCLUDES)
@@ -121,12 +163,33 @@ bat_prop_LDFLAGS = $(ROSE_RPATHS)
 bat_prop_LDADD = libbatSupport.a $(ROSE_LIBS)
 tests += bat-prop.passed
 
+bin_PROGRAMS += bat-scan-magic
+bat_scan_magic_SOURCES = bat-scan-magic.C
+bat_scan_magic_CPPFLAGS = $(ROSE_INCLUDES)
+bat_scan_magic_LDFLAGS = $(ROSE_RPATHS)
+bat_scan_magic_LDADD = libbatSupport.a $(ROSE_LIBS)
+tests += bat-scan-magic.passed
+
+bin_PROGRAMS += bat-similar-functions
+bat_similar_functions_SOURCES = bat-similar-functions.C
+bat_similar_functions_CPPFLAGS = $(ROSE_INCLUDES)
+bat_similar_functions_LDFLAGS = $(ROSE_RPATHS)
+bat_similar_functions_LDADD = libbatSupport.a $(ROSE_LIBS)
+tests += bat-similar-functions.passed
+
 bin_PROGRAMS += bat-stack-deltas
 bat_stack_deltas_SOURCES = bat-stack-deltas.C
 bat_stack_deltas_CPPFLAGS = $(ROSE_INCLUDES)
 bat_stack_deltas_LDFLAGS = $(ROSE_RPATHS)
 bat_stack_deltas_LDADD = libbatSupport.a $(ROSE_LIBS)
 tests += bat-stack-deltas.passed
+
+bin_PROGRAMS += bat-to-c
+bat_to_c_SOURCES = bat-to-c.C
+bat_to_c_CPPFLAGS = $(ROSE_INCLUDES)
+bat_to_c_LDFLAGS = $(ROSE_RPATHS)
+bat_to_c_LDADD = libbatSupport.a $(ROSE_LIBS)
+tests += bat-to-c.passed
 
 bin_PROGRAMS += bat-trace
 bat_trace_SOURCES = bat-trace.C
