--- a/tests/smoke/functional/Makefile.am
+++ b/tests/smoke/functional/Makefile.am
@@ -6,8 +6,6 @@ if ROSE_BUILD_BINARY_ANALYSIS_SUPPORT
 SUBDIRS += BinaryAnalysis
 endif
 
-# Rasmussen (11.17.2017): This test is no longer needed as the Fortran parse table
-# has been moved to the source tree.  See comment in ./Fortran/Makefile.am.
-#if ROSE_EXPERIMENTAL_OFP_ROSE_CONNECTION
-#SUBDIRS += Fortran
-#endif
+if ROSE_EXPERIMENTAL_FLANG_ROSE_CONNECTION
+SUBDIRS += Fortran
+endif
