--- a/src/frontend/Experimental_Jovial_ROSE_Connection/Makefile.am
+++ b/src/frontend/Experimental_Jovial_ROSE_Connection/Makefile.am
@@ -6,14 +6,7 @@ AM_CPPFLAGS = $(ROSE_INCLUDES) -I$(ATERM_INCLUDE_DIR) -I$(top_srcdir)/src/fronte
 
 noinst_LTLIBRARIES = libexperimentalRoseJovial.la
 
-# DQ (8/23/2017): I'm not clear if we need makefile conditionals, since the directory is already conditionally processed in the parent directory.
-
-if ROSE_EXPERIMENTAL_JOVIAL_ROSE_CONNECTION
-  libexperimentalRoseJovial_la_SOURCES = jovial_support.C ATermToSageJovialTraversal.C preprocess.C
-else
-# Compile using a function that represents the API of the Jovial support.
-  libexperimentalRoseJovial_la_SOURCES = dummy_jovial_main.C
-endif
+libexperimentalRoseJovial_la_SOURCES = jovial_support.C ATermToSageJovialTraversal.C preprocess.C
 
 bin_PROGRAMS = jovial_preprocess
 jovial_preprocess_SOURCES = jovial_preprocess.C
@@ -21,5 +14,4 @@ jovial_preprocess_LDADD = preprocess.o
 
 pkginclude_HEADERS = jovial_support.h
 
-noinst_HEADERS = \
-  ATermToSageJovialTraversal.h
+noinst_HEADERS = ATermToSageJovialTraversal.h
