(Binary Analysis) Moved a couple tools into the tools directory
RPM-224

--- a/tools/BinaryAnalysis/CMakeLists.txt
+++ b/tools/BinaryAnalysis/CMakeLists.txt
@@ -104,6 +104,10 @@ if(enable-binary-analysis)
   target_link_libraries(bat-similar-functions bat ROSE_DLL)
   install(TARGETS bat-similar-functions DESTINATION bin)
 
+  add_executable(bat-simplify bat-simplify.C)
+  target_link_libraries(bat-simplify bat ROSE_DLL)
+  install(TARGETS bat-simplify DESTINATION bin)
+
   add_executable(bat-stack-deltas bat-stack-deltas.C)
   target_link_libraries(bat-stack-deltas bat ROSE_DLL)
   install(TARGETS bat-stack-deltas DESTINATION bin)
@@ -119,5 +123,9 @@ if(enable-binary-analysis)
   add_executable(bat-var bat-var.C)
   target_link_libraries(bat-var bat ROSE_DLL)
   install(TARGETS bat-var DESTINATION bin)
+
+  add_executable(bat-xml-to-json bat-xml-to-json.C)
+  target_link_libraries(bat-xml-to-json bat ROSE_DLL)
+  install(TARGETS bat-xml-to-json DESTINATION bin)
 
 endif()
