(Binary Analysis) Renamed SymbolicExprParser to SymbolicExpressionParser
* Renamed Rose::BinaryAnalysis::SymbolicExprParser to
  Rose::BinaryAnalysis::SymbolicExpressionParser to comply with
  naming policy.

  Users can use namespace aliasing as a temporary workaround to
  continue using the old name.

* Renamed Rose/BinaryAnalysis/SymbolicExprParser.h to
  Rose/BinaryAnalysis/SymbolicExpressionParser.h to comply with naming
  policy.

  Users can still use the old header and will get a deprecation
  warning.

RPM-238

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -491,6 +491,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/String.h							\
 	Rose/BinaryAnalysis/SymbolicExpr.h						\
 	Rose/BinaryAnalysis/SymbolicExprParser.h					\
+	Rose/BinaryAnalysis/SymbolicExpressionParser.h					\
 	Rose/BinaryAnalysis/SystemCall.h						\
 	Rose/BinaryAnalysis/TaintedFlow.h						\
 	Rose/BinaryAnalysis/ToSource.h							\
