(Binary Analysis) Renamed SymbolicExpr -> SymbolicExpression
* Renamed Rose::BinaryAnalysis::SymbolicExpr to
  Rose::BinaryAnalysis::SymbolicExpression to comply with naming
  policy.

  Users can work around this change by using namespace aliasing, or by
  including the (now deprecated) SymbolicExpr.h header.

* Renamed Rose/BinaryAnalysis/SymbolicExpr.h to
  Rose/BinaryAnalysis/SymbolicExpression.h to comply with naming
  policy.

  The SymbolicExpr.h header still exists but is deprecated. It
  includes the new file and also makes an alias so SymbolicExpr is
  still available.

* The ROSE source code continues to use the deprecated names.

RPM-238

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -490,6 +490,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/StackDelta.h						\
 	Rose/BinaryAnalysis/String.h							\
 	Rose/BinaryAnalysis/SymbolicExpr.h						\
+	Rose/BinaryAnalysis/SymbolicExpression.h					\
 	Rose/BinaryAnalysis/SymbolicExprParser.h					\
 	Rose/BinaryAnalysis/SymbolicExpressionParser.h					\
 	Rose/BinaryAnalysis/SystemCall.h						\
